# ecr-cleaner

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: ecr.rs  error.rs  fmt.rs  main.rs
